updated backend with wp integration