@@ -1,19 +1,22 @@
 package com.trimly.config;
 
-import com.trimly.security.CustomUserDetailsService;
-import com.trimly.security.JwtAuthenticationFilter;
+import com.trimly.repository.UserRepository;
+import com.trimly.security.JwtAuthFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -31,50 +34,66 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final CustomUserDetailsService userDetailsService;
-    private final JwtAuthenticationFilter jwtFilter;
+    private final UserRepository userRepository;
+    private final JwtAuthFilter jwtAuthFilter;
 
     @Value("${app.cors.allowed-origins}")
     private String allowedOrigins;
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                // Public endpoints
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/shops/public/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/shops/*/services").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/shops/*/slots").permitAll()
-                // Customer endpoints
-                .requestMatchers("/api/bookings/customer/**").hasRole("CUSTOMER")
-                .requestMatchers(HttpMethod.POST, "/api/bookings").hasAnyRole("CUSTOMER")
-                // Barber endpoints
-                .requestMatchers("/api/barber/**").hasRole("BARBER")
-                // Admin endpoints
+            .csrf(AbstractHttpConfigurer::disable)
+            .cors(c -> c.configurationSource(corsSource()))
+            .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(a -> a
+                // Public — no token needed
+                .requestMatchers("/api/auth/otp/send").permitAll()
+                .requestMatchers("/api/auth/otp/verify").permitAll()
+                .requestMatchers("/api/auth/login").permitAll()
+                .requestMatchers("/api/auth/register/**").permitAll()
+                .requestMatchers("/api/auth/forgot-password").permitAll()
+                .requestMatchers("/api/auth/reset-password").permitAll()
+                .requestMatchers("/api/auth/refresh").permitAll()  // refresh uses its own DB token, not JWT
+                .requestMatchers("/api/public/**").permitAll()
+                .requestMatchers("/api/shops/public/**").permitAll()
+                .requestMatchers("/api/shops/*/slots").permitAll()
+                .requestMatchers("/api/location/**").permitAll()
+                .requestMatchers("/api/legal/**").permitAll()
+                .requestMatchers("/actuator/health", "/actuator/info").permitAll()
+                // Authenticated — role-based
+                .requestMatchers("/api/auth/me").authenticated()
+                .requestMatchers("/api/auth/logout").authenticated()
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                // Notifications
-                .requestMatchers("/api/notifications/**").authenticated()
-                // Everything else requires auth
+                .requestMatchers("/api/barber/**").hasRole("BARBER")
+                .requestMatchers("/api/customer/**").hasAnyRole("CUSTOMER", "BARBER", "ADMIN")
                 .anyRequest().authenticated()
             )
-            .authenticationProvider(authenticationProvider())
-            .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+            .authenticationProvider(authProvider())
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+            .exceptionHandling(e -> e
+                .authenticationEntryPoint((req, res, ex) -> {
+                    res.setStatus(401);
+                    res.setContentType("application/json;charset=UTF-8");
+                    res.getWriter().write("{\"success\":false,\"message\":\"Unauthorized — please login\"}");
+                })
+                .accessDeniedHandler((req, res, ex) -> {
+                    res.setStatus(403);
+                    res.setContentType("application/json;charset=UTF-8");
+                    res.getWriter().write("{\"success\":false,\"message\":\"Access denied\"}");
+                })
+            );
 
         return http.build();
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsSource() {
         CorsConfiguration config = new CorsConfiguration();
-
-        config.setAllowedOriginPatterns(List.of("*")); // allow all origins safely
-        config.setAllowedMethods(List.of("*"));
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(false); // VERY IMPORTANT
+        config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -83,20 +102,27 @@ public class SecurityConfig {
     }
 
     @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
+    public UserDetailsService userDetailsService() {
+        return identifier -> userRepository.findByEmail(identifier)
+            .or(() -> userRepository.findByPhone(identifier))
+            .orElseThrow(() -> new UsernameNotFoundException("User not found: " + identifier));
+    }
+
+    @Bean
+    public AuthenticationProvider authProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
-        provider.setUserDetailsService(userDetailsService);
+        provider.setUserDetailsService(userDetailsService());
         provider.setPasswordEncoder(passwordEncoder());
         return provider;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        return new BCryptPasswordEncoder(12);
     }
 }
